modified:   imagenes/x.png 	modified:   tablero.css 	modified:   tablero.html 	modified:   tablero.js

--- a/tablero.html
+++ b/tablero.html
@@ -5,22 +5,25 @@
         <link rel="stylesheet" href="tablero.css">
     </head>
     <body>
-        <p id="jugador1">Jugador1:</p>
-        <p id="jugador2">Jugador2:</p>
-        <div id="tablero">
-            <div id="casilla1" class="casilla"></div>
-            <div id="casilla2" class="casilla"></div>
-            <div id="casilla3" class="casilla"></div>
-            <div id="casilla4" class="casilla"></div>
-            <div id="casilla5" class="casilla"></div>
-            <div id="casilla6" class="casilla"></div>
-            <div id="casilla7" class="casilla"></div>
-            <div id="casilla8" class="casilla"></div>
-            <div id="casilla9" class="casilla"></div>
+        <div>
+            <div id="tablero">
+                <p id="jugador1">Jugador1:</p>
+                <div id="casilla1" class="casilla"></div>
+                <div id="casilla2" class="casilla"></div>
+                <div id="casilla3" class="casilla"></div>
+                <div id="casilla4" class="casilla"></div>
+                <div id="casilla5" class="casilla"></div>
+                <div id="casilla6" class="casilla"></div>
+                <div id="casilla7" class="casilla"></div>
+                <div id="casilla8" class="casilla"></div>
+                <div id="casilla9" class="casilla"></div>
+                <button id="boton">Reinicar partida</button>
+                <p id="jugador2">Jugador2:</p>
+            <p id="p"></p>
+            <p id="turno">Turno:</p>
+            <p id="turno2">Le toca:</p>
+            </div>
         </div>
-        <p id="p">Ganador es:</p>
-        <p id="turno">Turno:</p>
-       <button id="boton">Reinicar partida</button>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="tablero.js"></script>
     </body>
